--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <fieldset>
                     <div>
                         <input id="" class="" type="email" placeholder="Your O365 email" />
-                        <button id="" class="" type="submit">SEND</button>
+                        <button id="" class="" type="submit" aria-label="Send">SEND</button>
                     </div>
                 </fieldset>
             </form>
