--- a/index.html
+++ b/index.html
@@ -1,48 +1,107 @@
 <!doctype html>
 <html class="no-js" lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Beezy Code Challenge - Stefano Durante</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Beezy Code Challenge - Stefano Durante</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
+        <link rel="stylesheet" href="assets/styles/style.css">
+        <script src="assets/plugins/Modernizr/modernizr-2.8.3.min.js"></script>
+    </head>
 
-    <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->    
-    <link rel="stylesheet" href="style.css">
-    <script src="assets/plugins/Modernizr/modernizr-2.8.3.min.js"></script>
+    <body>
+        <header>
+            <ul>
+                <li><a href="http://">
+                        <svg height="32" viewBox="0 0 32 32" width="32"
+                            xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink"><g
+                                fill="none" fill-rule="evenodd"><path d="m0
+                                    0h1600v759h-1600z"
+                                    transform="translate(-1486 -40)" /><path
+                                        d="m0 0h32v32h-32z" /><path d="m24.8
+                                            9h-17.6c-1.21 0-2.189.787-2.189
+                                            1.75l-.011 10.5c0 .962.99 1.75 2.2
+                                            1.75h17.6c1.21 0 2.2-.788
+                                            2.2-1.75v-10.5c0-.963-.99-1.75-2.2-1.75zm-8.8
+                                            8-11-5.714v-1.286l11 5.714
+                                            11-5.714v1.286z" fill="#fff" /></g></svg>
+                                </a></li>
+                            <li><a href="http://">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        width="32" height="32" viewBox="0 0 32
+                                        32">
+                                        <path fill="#FEFEFE" fill-rule="evenodd"
+                                            d="M27 10.02a8.592 8.592 0 0
+                                            1-2.474.678 4.309 4.309 0 0 0
+                                            1.893-2.382 8.567 8.567 0 0 1-2.736
+                                            1.044 4.308 4.308 0 0 0-7.34 3.93
+                                            12.227 12.227 0 0 1-8.881-4.504
+                                            4.306 4.306 0 0 0-.583 2.169c0
+                                            1.493.76 2.812 1.917 3.585a4.307
+                                            4.307 0 0 1-1.953-.537v.053a4.309
+                                            4.309 0 0 0 3.458 4.224 4.215 4.215
+                                            0 0 1-1.137.152c-.277
+                                            0-.548-.026-.81-.077a4.307 4.307 0 0
+                                            0 4.025 2.99 8.645 8.645 0 0 1-5.351
+                                            1.846A8.84 8.84 0 0 1 6 23.13a12.212
+                                            12.212 0 0 0 6.604 1.935c7.926 0
+                                            12.259-6.564 12.259-12.258
+                                            0-.187-.004-.374-.013-.557a8.746
+                                            8.746 0 0 0 2.15-2.23" />
+                                        </svg>
 
-</head>
+                                    </a></li>
+                            </ul>
+                        </header>
+                        <main>
+                            <section id="">
+                                <header id="" class="">
+                                    <h1>Contoso</h1>hola
+                                </header>
 
-<body>
-    <main>
-        <section id="">
-            <header id="" class="">
-                <h1>Contoso</h1>
-            </header>
+                                <picture>
+                                    <source media="(min-width: 36em)"
+                                        srcset="assets/images/iphones/iphones-final@3x.png 1024w,
+                                        assets/images/iphones/iphones-final@2x.png 640w,
+                                        assets/images/iphones/iphones-final.png 320w"
+                                        />
+                                    <source 
+                                    srcset="assets/images/iphones/iphones-mobile@3x.png 3x,
+                                    assets/images/iphones/iphones-mobile@2x.png 2x,
+                                    assets/images/iphones/iphones-mobile.png"/>
+                                    <img src="assets/images/iphones/iphones-final.png" alt="A rad wolf" />
+                                </picture>
+                                <img src="" alt="" id="" class="">
 
-            <img src="" alt="" id="" class="" >
-
-            <article id="" class="">
-                <h2>
-                    Curabitur lobortis id lorem id bibendum ut id consectetur.
-                </h2>
-                <p>Vestibulum rutrum quam vitae fringilla tincidunt amet suspendisse nec tortor.</p>
-            </article>
-            <form id="" class="" action="">
-                <fieldset>
-                    <div>
-                        <input id="" class="" type="email" placeholder="Your O365 email" />
-                        <button id="" class="" type="submit" aria-label="Send">SEND</button>
-                    </div>
-                </fieldset>
-            </form>
-        </section>
-    </main>
-    <!--[if lt IE 8]>
+                                <article id="" class="">
+                                    <h2>
+                                        Curabitur lobortis id lorem id bibendum
+                                        ut id consectetur.
+                                    </h2>
+                                    <p>Vestibulum rutrum quam vitae fringilla
+                                        tincidunt amet suspendisse nec tortor.</p>
+                                </article>
+                                <form id="" class="" action="">
+                                    <fieldset>
+                                        <div>
+                                            <input id="" class="" type="email"
+                                                placeholder="Your O365 email" />
+                                            <button id="" class="" type="submit"
+                                                aria-label="Send">SEND</button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </section>
+                        </main>
+                        <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <script src="assets/plugins/meanMenu/jquery.meanmenu.min.js"></script>
-    <script src="assets/main.js"></script>
-</body>
+                        <script
+                            src="assets/plugins/meanMenu/jquery.meanmenu.min.js"></script>
+                        <script src="assets/main.js"></script>
+                    </body>
 
-</html>
+                </html>
